--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.0.1",
+    "@material-ui/core": "3.8.3",
     "@material-ui/icons": "^3.0.1",
+    "@material-ui/lab": "^3.0.0-alpha.28",
     "color-hash": "^1.0.3",
     "downshift": "^2.2.0",
     "immutability-helper": "^2.7.1",
@@ -17,6 +18,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-share": "^2.4.0",
     "recharts": "^1.3.4",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
